--- a/css/intro.css
+++ b/css/intro.css
@@ -2,7 +2,7 @@
     display: flex;
     padding-top: 100px;
     padding-bottom: 120px;
-    border-bottom: 1px solid;
+    /*border-bottom: 1px solid;*/
     position: relative;
 }
 
