--- a/css/about.css
+++ b/css/about.css
@@ -15,7 +15,7 @@
 
 .about__text {
     width: 50%;
-    margin-left: 30%;
+    margin-left: 10%;
     font-size: 1.1rem;
 }
 
@@ -27,7 +27,11 @@
 .about__text p{
     margin: 7px 0px;
 }
-
+.intro__diplom{
+    weight: 300px;
+    height: 300px;
+}
+/*
 .about__stat{
     display: flex;
     max-width: 1090px;
@@ -44,3 +48,4 @@
     font-weight: 700;
     color: black;
 }
+*/
